<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<Button android:layout_height="wrap_content" android:id="@+id/joinButton"
		android:text="@string/userJoin" android:layout_width="fill_parent"></Button>
	<ToggleButton android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/speakButton"
		android:textOff="@string/userSpeak" android:textOn="@string/userSpeak"
		android:visibility="gone"></ToggleButton>
	<ListView android:id="@+id/android:list" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
	</ListView>
	<TextView android:layout_height="wrap_content" android:id="@+id/android:empty"
		android:text="@string/noUsers" android:layout_width="fill_parent"></TextView>
</LinearLayout>
